# lakehouse

./: .gitignore  .gitmodules  AGENTS.PROJECT.md  DEPLOYMENT.md  EVENTS.md  LAN.md  Makefile  README.md  lakehouse.code-workspace  pyproject.toml
.amplified/: metadata.json
.amplifierd/share/profiles/developer-expertise/dev/hooks/c93efe323f305c9da291d1e3f117cfe12c5a478f/: pyproject.toml
.amplifierd/share/profiles/developer-expertise/full/hooks/09c31162ba985d25eafb78c1103a5c1d8701c3a7/: README.md  pyproject.toml
.amplifierd/share/profiles/developer-expertise/full/hooks/5af9d43f4d8f31b132f57614cf387a68c007f844/: pyproject.toml
.amplifierd/share/profiles/developer-expertise/full/hooks/7bf1c8df81b2394d0f6608da59635d3a06a00f26/: README.md  pyproject.toml
.amplifierd/share/profiles/developer-expertise/full/hooks/e5fc7db21ebe7a5f2336be7a3aa2b88f12de0bfa/: pyproject.toml
amplifier_library/: README.md  __init__.py  models.py  pyproject.toml
amplifier_library/automations/: README.md  __init__.py  manager.py
amplifier_library/cache/: __init__.py  detection.py  metadata_store.py  models.py  status.py  updates.py
amplifier_library/config/: __init__.py  loader.py  settings.py
amplifier_library/execution/: __init__.py  runner.py
amplifier_library/models/: __init__.py  automations.py  base.py  profiles.py  registries.py  sessions.py
amplifier_library/services/: registry_service.py
amplifier_library/sessions/: __init__.py  manager.py  spawner.py  state.py  test_spawner_basic.py
amplifier_library/storage/: __init__.py  paths.py
amplifier_library/tests/: __init__.py  conftest.py
amplifier_library/tests/automations/: __init__.py  test_manager.py
amplifier_library/tests/sessions/: __init__.py  test_config_merge.py  test_spawner_integration.py  test_spawner_unit.py
amplifier_library/utils/: git_url.py
amplifierd/: README.md  main.py  pyproject.toml  streaming.py
amplifierd/.amplifierd/share/: collections.yaml  profiles.yaml  registries.yaml
amplifierd/amplifierd/: README.md  __main__.py  cli.py  dependencies.py  main.py  module_resolver.py
amplifierd/amplifierd/config/: loader.py  models.py
amplifierd/amplifierd/hooks/: __init__.py
amplifierd/amplifierd/models/: __init__.py  compilation_metadata.py  directories.py  events.py  modules.py  profiles.py  trace.py
amplifierd/amplifierd/routers/: __init__.py  amplified_directories.py  automations.py  cache.py  collections.py  directories.py  events.py  messages.py  mount_plans.py  profiles.py  registries.py  sessions.py  settings.py  status.py  stream.py
amplifierd/amplifierd/services/: AUTOMATION_SCHEDULER.md  __init__.py  automation_scheduler.py  bundle_profile_service.py  bundle_service.py  collection_service.py  global_events.py  hybrid_mention_resolver.py  mention_loader.py  mention_resolver.py  metadata_init.py  module_service.py  mount_plan_service.py  profile_compilation.py  profile_service.py  ref_resolution.py  session_stream_manager.py  trace_aggregator.py
amplifierd/amplifierd/startup/: __init__.py
amplifierd/amplifierd/utils/: mentions.py
amplifierd/data/collections/developer-expertise/profiles/: dev.md  full.md
amplifierd/data/collections/foundation/: README.md  pyproject.toml
amplifierd/data/collections/foundation/profiles/: base.md  foundation.md  production.md
amplifierd/docs/: EVENTS.md
amplifierd/hooks/: __init__.py
amplifierd/models/: __init__.py  amplified_directories.py  base.py  collections.py  context_messages.py  directories.py  errors.py  modules.py  mount_plans.py  profiles.py  requests.py  responses.py
amplifierd/routers/: __init__.py  collections.py  directories.py  messages.py  modules.py  profiles.py  sessions.py  status.py  stream.py
amplifierd/services/: README.md  __init__.py  amplified_directory_service.py  collection_registry.py  collection_service.py  content_deduplicator.py  mention_loader.py  module_discovery_service.py  module_resolver_service.py  module_service.py  mount_plan_service.py  profile_compilation.py  profile_discovery.py  profile_service.py  ref_resolution.py  session_stream_manager.py  session_stream_registry.py  simple_collection_service.py  simple_module_service.py  simple_profile_service.py
amplifierd/tests/: conftest.py  test_profile_named_dirs.py.v2
amplifierd/tests/daemon/: test_api_automations.py  test_api_component_refs.py  test_api_events.py  test_api_messages.py  test_api_modules.py  test_api_mount_plans.py  test_api_profiles.py  test_api_sessions.py  test_module_resolver.py  test_mount_plan_integration.py  test_profile_switching_persistence.py  test_working_dir_injection.py
amplifierd/tests/integration/: test_mention_resolution_integration.py
amplifierd/tests/routers/: test_sessions_behavior_instructions.py
amplifierd/tests/services/: test_automation_scheduler.py  test_mention_loader.py  test_mention_resolver.py  test_profile_compilation.py.v2  test_profile_compilation_agent_refs.py.v2  test_profile_compilation_change_detection.py.v2  test_profile_compilation_provider_config.py  test_session_state_service.py
amplifierd/tests/utils/: test_mentions.py
amplifierd/utils/: __init__.py  mentions.py  profile_validation.py
notebooks/: README.md  pyproject.toml
notebooks/amplifier-core/: amplifier-agents.ipynb  amplifier-hooks.ipynb  amplifier-modules.ipynb  amplifier-mounts.ipynb
notebooks/amplifierd/: 01-getting-started.ipynb  02-sessions-and-messages.ipynb  03-profile-management.ipynb  04-collection-management.ipynb  05-module-management.ipynb  06-mount-plan-generation.ipynb  07-session-lifecycle.ipynb  README.md
registry/: README.md
registry/profiles.v3/: README.md  SOURCES.txt  compile_profile.py  config.yaml  pyproject.toml  software-developer-mount-plan.json  software-developer.yaml  software-developer_mount_plan.json
registry/tools/amplifier-module-tool-search/: README.md  pyproject.toml
registry/tools/amplifier-module-tool-search/amplifier_module_tool_search/: __init__.py  glob.py  grep.py
registry/tools/amplifier-module-tool-search/tests/: test_behavioral.py  test_validation.py
tests/: conftest.py  (+3 more)
(+217 files in other folders)
