[project]
name = "amplifierd-notebooks"
version = "0.1.0"
description = "Jupyter notebooks for Amplifier daemon development"
requires-python = ">=3.11"

dependencies = [
    # Jupyter essentials
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
    "notebook>=7.0.0",

    # Access to amplifier code
    "amplifier-core",
    "amplifierd",

    # Common notebook needs (subset from daemon)
    "pydantic>=2.10.0",
    "gitpython>=3.1.0",
    "anthropic>=0.75.0",
    "aiohttp>=3.13.2",

    # Visualization/analysis
    "matplotlib>=3.8.0",
    "pandas>=2.0.0",
]

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core" }
amplifierd = { path = "../amplifierd", editable = true }
