[project]
name = "amplifier-profile-compiler"
version = "0.1.0"
description = "V3 profile compiler for Amplifier system"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "gitpython>=3.1",
    "pydantic>=2.0",
    "fsspec>=2024.0",
    "amplifierd",
]

[tool.uv.sources]
amplifierd = { path = "../../amplifierd", editable = true }

[tool.uv]
package = false
