[project]
name = "amplifier-module-tool-search"
version = "0.1.0"
description = "Reference tool module - Search tools (grep/glob) for Amplifier"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
]

[project.entry-points."amplifier.modules"]
tool-search = "amplifier_module_tool_search:mount"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_module_tool_search",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"

