[project]
name = "amplifier-module-hooks-logging"
version = "1.0.0"
description = "Reference hook module - Structured logging for Amplifier"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
]

[project.entry-points."amplifier.modules"]
hooks-logging = "amplifier_module_hooks_logging:mount"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_module_hooks_logging",
]

[tool.hatch.metadata]
allow-direct-references = true
