[project]
name = "amplifier-module-provider-openai"
version = "1.0.0"
description = "Reference provider module - OpenAI GPT integration for Amplifier"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
    "openai>=1.0.0",
]

[project.entry-points."amplifier.modules"]
provider-openai = "amplifier_module_provider_openai:mount"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_module_provider_openai",
]

[tool.hatch.metadata]
allow-direct-references = true
