[project]
name = "amplifier-module-loop-basic"
version = "1.0.0"
description = "Reference orchestrator module - basic agent loop for Amplifier"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
]

[project.entry-points."amplifier.modules"]
loop-basic = "amplifier_module_loop_basic:mount"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_module_loop_basic",
]

[tool.hatch.metadata]
allow-direct-references = true
