[project]
name = "amplifier-module-hooks-backup"
version = "1.0.0"
description = "Transcript backup hook module for Amplifier"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
]

[project.entry-points."amplifier.modules"]
hooks-backup = "amplifier_module_hooks_backup:mount"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_module_hooks_backup",
]

[tool.hatch.metadata]
allow-direct-references = true
