[project]
name = "amplifier-module-hooks-approval"
version = "0.1.0"
description = "Reference hook module - User approval workflow for Amplifier"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
]

[project.entry-points."amplifier.modules"]
hooks-approval = "amplifier_module_hooks_approval:mount"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_module_hooks_approval",
]

[tool.hatch.metadata]
allow-direct-references = true
