[project]
name = "amplifier-module-loop-streaming"
version = "1.0.0"
description = "Streaming orchestrator module for Amplifier"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
]

[project.entry-points."amplifier.modules"]
loop-streaming = "amplifier_module_loop_streaming:mount"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_module_loop_streaming",
]

[tool.hatch.metadata]
allow-direct-references = true
